objects/TW1_IGP_M__c.object
<CustomObject>
    <description>Indicador Econômico - IGP-M</description>
    <fields>
        <fullName>TW1_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>IGP-M</relationshipLabel>
        <relationshipName>IGP_M</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Indice_Anual__c</fullName>
        <label>Indice Anual</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Indice_Base__c</fullName>
        <label>Indice Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Indice_Mensal__c</fullName>
        <label>Indice Mensal</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TW1_Mes_Ano__c</fullName>
        <label>Mês Ano</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>IGP-M</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Mes_Ano__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de IGP-M</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IGP-M</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validar_campo_Mes_Ano</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    NOT(ISBLANK(TW1_Mes_Ano__c)), 
    IF(NOT(REGEX(TW1_Mes_Ano__c,&quot;01/[0-9]{2}/[0-9]{4}&quot;)), 
       true, 
       OR(CASE(MID(TW1_Mes_Ano__c,4,2), 
          &quot;01&quot;,1, 
          &quot;02&quot;,1, 
          &quot;03&quot;,1, 
          &quot;04&quot;,1, 
          &quot;05&quot;,1, 
          &quot;06&quot;,1, 
          &quot;07&quot;,1, 
          &quot;08&quot;,1, 
          &quot;09&quot;,1, 
          &quot;10&quot;,1, 
          &quot;11&quot;,1, 
          &quot;12&quot;,1, 
            0)=0, 
          VALUE(RIGHT(TW1_Mes_Ano__c,4))&lt; 1900)) 

   )</errorConditionFormula>
        <errorDisplayField>TW1_Mes_Ano__c</errorDisplayField>
        <errorMessage>Campo deve ser no formato: ex: 01/MES/ANO.
Mês - 01 a 12 
Ano - 1900 - atual</errorMessage>
    </validationRules>
</CustomObject>